	  number of times video must be scaled down, saving CPU time. (Jakub Adam)
	  (half of #13095)
	* Starting multiple video calls and ending one no longer causes the other
	  calls to stop sending audio and video. (Jakub Adam) (#12758, #13237)
	* Perl bindings now respect LDFLAGS. (Peter Volkov, Markos Chandras)
	  (#12638)
	* Added AddTrust External Root CA.  (#11554)

	Groupwise:
	* Don't show two windows when using "Get Info" on a buddy. (Gabriel Burt;
	  Novell, Inc.) (#13108)

	IRC:
	* Don't send ISON messages longer than 512 bytes. (Jeffrey Honig) (#9692)

	libpurple:
	* Stop sending audio when placing a call on hold. (Jakub Adam) (#13032)
	* Stop translating gpointers to ints in the dbus API.  This removes
	  functions from the dbus API.  (The openSUSE Project) (#12507)
	* Fix D-Bus introspection calls that omit the interface parameter.  (Tom
	  Samstag) (#13073)
	* Fixed bugs in purple_str_to_time() that caused the most recent 'make
	  check' failures.  (Nader Morshed) (#13131)

	Pidgin:
	* Support using the Page Up and Page Down keys on the numeric keypad in
	  the conversation window.  (Ryan Flegel) (#13127)
	* Fix a few memory leaks. (Nader Morshed) (#13162)
	* Support rendering strikethrough when received as in-line CSS. (#13168)

	Plugins:
	* The Voice/Video Settings plugin no longer resets selected devices to
	  defaults. (Jakub Adam) (#13044)
	* The Voice/Video Settings plugin no longer crashes when a stored device
	  name is not found in the list of available devices. (Jakub Adam)
	  (#13238)
	* The Autoaccept plugin now allows disabling filename escaping. (Rok
	  Mandeljc) (half of #11459)
	* The Autoaccept plugin now allows choosing Reject/Ask/Accept for
	  non-buddies. (Rok Mandeljc) (half of #11459)

	QQ:
	* QQ2008 is now the default protocol version. (Michael Terry) (#11635)

	XMPP:
	* Don't crash when receiving an unexpected/invalid jingle transport type.
	  (Nikita Kozlov) (#13136)